# tracehouse-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/claude_monitor/: __init__.py  _global.py  client.py  training.py  wandb.py
src/tracehouse/: __init__.py  _global.py  client.py  media.py  system.py  training.py  wandb.py
src/trackio/: __init__.py
tests/: test_run.py  test_trackio.py  test_training_run.py  test_wandb_compat.py
