[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracehouse-sdk"
version = "0.5.1"
description = "tracehouse SDK — push traces & spans to tracehouse from Python, wandb-style."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tracehouse" }]
keywords = ["llm", "agents", "observability", "tracing", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
# Zero install-time dependencies — uses only the standard library so the SDK
# can be added to any environment without dragging extras.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/AlexWortega/tracehouse-sdk"
Source = "https://github.com/AlexWortega/tracehouse-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/tracehouse"]

[tool.hatch.build.targets.sdist]
include = ["src/tracehouse", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
